--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,10 @@
           <a routerLink='/customers' routerLinkActive='active'>Customers </a></li>
       
         <li class="nav-item">
-            <a routerLink='/about' routerLinkActive='active'>About</a>
+            <a routerLink='/about' routerLinkActive='active'></a>
         </li>
         <li class="nav-item">
-            <a routerLink='/orders' routerLinkActive='active'>Orders</a>
+            <a routerLink='/orders' routerLinkActive='active'></a>
         </li>
   
         
