--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -18,7 +18,7 @@
               <hr>
               <!-- Quotation -->
               <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
-              <a href="#" class="btn btn-primary">Pay Via Mpesa</a>
+              <a routerLink='/payment' class="btn btn-primary" routerLinkActive='active'> Pay Via Mpesa</a>
             </div>
             
           </div>
@@ -41,7 +41,7 @@
           <hr>
           <!-- Quotation -->
           <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
-          <a href="#" class="btn btn-primary">Pay Via Mpesa</a>
+          <a routerLink='/payment' class="btn btn-primary" routerLinkActive='active'> Pay Via Mpesa</a>
         </div>
         
       </div>
@@ -64,7 +64,7 @@
               <hr>
               <!-- Quotation -->
               <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
-              <a href="#" class="btn btn-primary">Pay Via Mpesa </a>
+              <a routerLink='/payment' class="btn btn-primary" routerLinkActive='active'> Pay Via Mpesa</a>
             </div>
             
           </div>
@@ -89,7 +89,7 @@
       <hr>
       <!-- Quotation -->
       <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
-      <a href="#" class="btn btn-primary">Pay Via Mpesa</a>
+      <a routerLink='/payment' class="btn btn-primary" routerLinkActive='active'> Pay Via Mpesa</a>
     </div>
     
   </div>
